# c3

./: .gitignore  LICENSE  README.md  RELEASE.md  SIGNING.md  index.html  package-lock.json  package.json  setup.sh
.github/workflows/: release.yml
hooks/: SETUP.md  c3-hook.sh  c3-omp-hook.ts  c3-reporter.mjs
scripts/: focus-session.sh  test-persistent.js  test-sessions.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: c3-hook.sh  c3-omp-hook.ts
src-tauri/src/: lib.rs  main.rs  tmux_scanner.rs
src/components/: Cube.tsx  DebugPanel.tsx  GroupLane.tsx  GroupModal.tsx  Header.tsx  KeyboardHints.tsx  KillSessionModal.tsx  Lane.tsx  PinnedLane.tsx  SearchModal.tsx  SessionCard.tsx  SettingsModal.tsx  Toast.tsx  WarRoom.tsx
src/stores/: sessions.ts  updater.ts
src/types/: index.ts
